--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>G2C</title>
+  <link rel="icon" href="./images/G2C Logo.jpg">
   <link rel="stylesheet" href="./styles.css">
+
+
    <!-- fonts -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,22 +21,56 @@
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="main-cursor"></div>
   <div class="main-section">
     <h1 class="logo">General 2000 Communications</h1>
     <div class="main-container">
       <h1>WE <span class="auto-type">INSPIRE</span></h1>
       <h3>Creating ads that speak volumes</h3>
       <div class="main-btns">
-        <button><a href="">About Us</a></button>
-        <button><a href="">Our work</a></button>
+        <button><a href="#team-section">About Us</a></button>
         <button><a href="">Clients</a></button>
         <button><a href="">Contact Us</a></button>
       </div>
     </div>
-    <!-- <div class="cursor-dot"></div>
-    <div class="cursor-outline"></div> -->
-    <div class="main-cursor"></div>
+    </div>
+    
+  <div class="team-section" id="team-section">
+    <p class="head">Meet our Team</p>
+    <div class="team-container">
+      <div class="team-member" data-info="Usman Arab Saati" data-position="Chief Editor of Daily Vatan">
+        <img src="./images/1.jpg">
+      </div>
+      <div class="team-member" data-info="Shahid Saati" data-position="Proprietor">
+        <img src="./images/2.jpg">
+      </div>
+      <div class="team-member" data-info="Irshad Saati" data-position="Manager">
+        <img src="./images/3.jpg">
+      </div>
+    </div>
+    <div class="info-container">
+      <p id="info-text">General 2000 Communications</p>
+      <p id="position-text"></p>
+    </div>
+
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./script.js"></script>
