Added clients section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <h3>Creating ads that speak volumes</h3>
       <div class="main-btns">
         <button><a href="#team-section">About Us</a></button>
-        <button><a href="">Clients</a></button>
-        <button><a href="">Contact Us</a></button>
+        <button><a href="#clients-section">Clients</a></button>
+        <button><a href="#contact-section">Contact Us</a></button>
       </div>
     </div>
     </div>
@@ -52,9 +52,37 @@
       <p id="info-text">General 2000 Communications</p>
       <p id="position-text"></p>
     </div>
-
   </div>
 
+  <div class="clients-section" id="clients-section">
+    <p>Our Clients</p>
+    <div class="logos">
+      <div class="logo-slider">
+        <img src="./images/logos/1.png">
+        <img src="./images/logos/2.png">
+        <img src="./images/logos/3.png">
+        <img src="./images/logos/7.png">
+        <img src="./images/logos/4.png">
+        <img src="./images/logos/5.png">
+        <img src="./images/logos/9.png">
+        <img src="./images/logos/6.png">
+        <img src="./images/logos/8.png">
+      </div>
+      <div class="logo-slider">
+        <img src="./images/logos/1.png">
+        <img src="./images/logos/2.png">
+        <img src="./images/logos/3.png">
+        <img src="./images/logos/7.png">
+        <img src="./images/logos/4.png">
+        <img src="./images/logos/5.png">
+        <img src="./images/logos/6.png">
+        <img src="./images/logos/8.png">
+        <img src="./images/logos/9.png">
+      </div>
+    </div>
+  </div>
+
+  <div class="contact-section" id="contact-section"></div>
 
 
 
