--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="icon" href="./images/G2C Logo.jpg">
   <link rel="stylesheet" href="./styles.css">
 
-
-   <!-- fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!-- remix -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+  rel="stylesheet"/>
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,7 +84,30 @@
     </div>
   </div>
 
-  <div class="contact-section" id="contact-section"></div>
+  <div class="contact-section" id="contact-section">
+    <p class="head">Contact Us</p>
+    <div class="contact-container">
+      <div class="contact-details">
+        <div class="detail">
+          <i class="ri-map-pin-2-line"></i>
+          <p>Karachi, Pakistan</p>
+        </div>
+        <div class="detail">
+          <i class="ri-mail-fill"></i>
+          <p>irshad947@gmail.com</p>
+        </div>
+        <div class="detail">
+          <i class="ri-phone-fill"></i>
+          <p>92335-3241059</p>
+        </div>
+        <div class="detail">
+          <i class="ri-printer-line"></i>
+          <p>9221-2430878</p>
+        </div>
+      </div>
+      <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3620.3784301770925!2d66.9986580744293!3d24.850921545640908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33ff2f1a5ca7d%3A0x395ab77473b9142a!2sBombay%20life%20building!5e0!3m2!1sen!2s!4v1722105652431!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+    </div>
+  </div>
 
 
 
